[tool.poetry]
name = "slide-twitch"
version = "0.1.0"
description = ""
authors = ["Alex Jercan <jercan_alex27@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
twitchAPI = "^3.11.0"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
fakeyou = "^1.2.5"
ffmpeg-python = "^0.2.0"
tqdm = "^4.66.1"
wave = "^0.0.2"
obsws-python = "^1.6.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
pylint = "^2.17.5"
mypy = "^1.5.1"

[tool.poetry.scripts]
slide-twitch = "slide_twitch.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
